public/less/themes/default/widgets.less
// default widgets

.widget {
	// styles for all widgets
}

.button-bar {
	display: inline-block;
	font-size: @button-bar-font-size;

	& > .button-bar-item {
		margin-left: @button-bar-item-margin;

		&:first-child {
			margin-left: 0;
		}

		&.disabled {
			opacity: 0.5;
		}

		&.hidden {
			display: none;
		}

		&:before {
			cursor: pointer;
		}
	}
}

.modal {
	position: fixed;
	z-index: 5; // to-do: too high?

	.faint(black);
	.fill-up-parent();

	&.hidden {
		display: none;
	}
}

.modal-dialog {
	.modal;

	& > .modal-dialog-msg {
		.widget;

		.set-in-center(@modal-dialog-msg-width, @modal-dialog-msg-height);

		& > .modal-dialog-msg-header, & > .modal-dialog-msg-content {
			width: 100%;
			font-size: @modal-dialog-msg-font-size;
			padding: @modal-dialog-msg-text-padding;
		}

		& > .modal-dialog-msg-header {
			height: @modal-dialog-msg-header-height;
			line-height: @modal-dialog-msg-header-height - (@modal-dialog-msg-text-padding * 2);
		}

		& > .modal-dialog-msg-content {
			height: @modal-dialog-msg-content-height;
			overflow-y: auto;
			white-space: pre-wrap; // displays new lines correctly
		}

		& > .modal-dialog-msg-button-container {
			height: @modal-dialog-msg-button-height;

			& > .modal-dialog-msg-button {
				height: 100%;
				line-height: @modal-dialog-msg-button-height - (@modal-dialog-msg-button-padding * 2);
				display: inline-block;
				padding: @modal-dialog-msg-button-padding;
				text-align: center;

				// to-do: get rid of these classes?
				&.singular {
					width: 100%;
				}

				&.binary {
					width: 50%;

					&:first-child {
						padding-right: @modal-dialog-msg-button-padding / 2;
					}

					&:last-child {
						padding-left: @modal-dialog-msg-button-padding / 2;
					}
				}

				& > .modal-dialog-msg-button-content {
					font-size: @modal-dialog-msg-font-size;

					.fill-up-parent();

					&:hover {
						cursor: pointer;
					}
				}
			}
		}
	}
}

.modal-image {
	.modal;

	cursor: pointer;

	& > img {
		.box-shadow(@std-box-shadow);
		.center();
		.fit-to-parent();
	}
}

.nav-bar {
	width: @nav-bar-width;
	height: @nav-bar-height;
	margin-left: -@nav-bar-width / 2;
	left: 50%;
	position: fixed;
	z-index: 1;

	& > .nav-bar-content {
		.widget;

		& > .nav-bar-beacon {
			width: @nav-bar-beacon-width;
			height: @nav-bar-beacon-height;
			position: absolute;
		}

		& > .nav-bar-item {
			display: inline-block;

			&, & > .nav-bar-expand > .nav-bar-sub-item {
				width: @nav-bar-item-width;
				height: @nav-bar-item-height;
				line-height: @nav-bar-item-height;
				font-size: @nav-bar-item-font-size;
				cursor: pointer;
				text-align: center;

				& > a {
					display: block; // fills up div and becomes clickable
				}
			}

			& > .nav-bar-expand {
				display: none; // hide expand
				position: absolute;
			}

			&:hover > .nav-bar-expand {
				display: block; // show expand
			}
		}
	}
}

.side-bar {
	.widget;
	
	width: @side-bar-width;
	height: 100%;
	position: fixed;
	top: 0;
	z-index: 1;

	&.left {
		left: 0;
	}

	&.right {
		right: 0;
	}

	& > a {
		display: block;
	}

	& > .side-bar-header, & > .side-bar-item-container > .side-bar-item {
		padding-left: @side-bar-text-padding;
		padding-right: @side-bar-text-padding;
		position: relative;
	}

	& > .side-bar-header {
		width: @side-bar-header-width;
		height: @side-bar-header-height;
		line-height: @side-bar-header-height;
		font-size: @side-bar-header-font-size;
	}

	& > .side-bar-item-container {
		overflow: auto;

		.calc-height(~'100% - '@side-bar-header-height);
		
		& > .side-bar-item {
			width: @side-bar-item-width;
			height: @side-bar-item-height;
			line-height: @side-bar-item-height;
			font-size: @side-bar-item-font-size;
			cursor: pointer;

			&:not(.side-bar-new-item) {
				.contain-text();
			}
		}
	}
}

